# example_gazebo_standalone_plugin

./: CMakeLists.txt  plugin.cc  plugin.hh  publish_vel.cc
model/: model.config  model.sdf
msgs/: CMakeLists.txt  velocity.proto
